Fix collapse navbar color and set background color

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -4,6 +4,7 @@ body {
 	font-size: 15px;
     padding-bottom: 100px;
     padding-top: 0px;
+    background-color: #E0E8F0;
 }
 
 .top-header {
@@ -18,6 +19,7 @@ body {
 	float: left;
 	position: relative;
 	width: 100%;
+	background-color: #E0E8F0;
 }
 
 .main-header > .container {
@@ -129,6 +131,16 @@ body {
   
 }
 
+.navbar-collapse.in {
+	background-color: #59578D;
+}
+
+.navbar-nav > li > a{
+	color: #FFFFFF;
+  	text-decoration: none;
+	background-color: #59578D;
+}
+
 
 .main-navbar > .container > .navbar-header > .navbar-toggle > .icon-bar {
 	background-color: #ffffff;
@@ -209,9 +221,9 @@ body {
 .col-lg-12 {
   position: relative;
   min-height: 1px;
-  padding-top: 40px;
-  padding-right: 40px;
-  padding-left: 40px;
+  padding-top: 10px;
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
 .btn-primary {
